--- a/Project.toml
+++ b/Project.toml
@@ -3,10 +3,15 @@ uuid = "d58978e5-989f-55fb-8d15-ea34adc7bf54"
 version = "0.18.12"
 
 [deps]
+AbstractFFTs = "621f4979-c628-5d54-868e-fcf4e3e8185c"
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MemPool = "f9f48841-c794-520a-933b-121f7ba6ed94"
@@ -39,12 +44,17 @@ JSON3Ext = "JSON3"
 PlotsExt = ["DataFrames", "Plots"]
 
 [compat]
+AbstractFFTs = "1.5.0"
 Adapt = "4.0.4"
+CUDA = "5.5.2"
 Colors = "0.12"
 DataFrames = "1"
 DataStructures = "0.18"
+FFTW = "1.8.0"
+GPUArrays = "10.3.1"
 GraphViz = "0.2"
 Graphs = "1"
+KernelAbstractions = "0.9.30"
 MacroTools = "0.5"
 MemPool = "0.4.6"
 OnlineStats = "1"
