benchmark and tests

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.18.12"
 [deps]
 AbstractFFTs = "621f4979-c628-5d54-868e-fcf4e3e8185c"
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
@@ -46,6 +47,7 @@ PlotsExt = ["DataFrames", "Plots"]
 [compat]
 AbstractFFTs = "1.5.0"
 Adapt = "4.0.4"
+BenchmarkTools = "1.5.0"
 CUDA = "5.5.2"
 Colors = "0.12"
 DataFrames = "1"
